<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <plurals name="delete_selection">
        <item quantity="one">Delete selected item?</item>
        <item quantity="other">Delete selected items?</item>
    </plurals>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_albums_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <plurals name="number_of_groups_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="crop_saved">
        Cropped image saved to <xliff:g id="folder_name">%s</xliff:g>.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="please_wait">Please wait</string>
    <string name="rendering_photo_sphere">Rendering photo sphere</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <plurals name="pref_camera_timer_entry">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value" translatable="false">off</string>
    <string name="setting_on_value" translatable="false">on</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">4</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD 1080p</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD 720p</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD 480p</string>
    <string name="pref_video_quality_entry_cif" translatable="false">CIF</string>
    <string name="pref_video_quality_entry_qcif" translatable="false">QCIF</string>
    <string name="pref_video_quality_entry_qvga" translatable="false">QVGA</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_low">Low</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_13mp">13M pixels</string>
    <string name="pref_camera_picturesize_entry_8mp">8M pixels</string>
    <string name="pref_camera_picturesize_entry_5mp">5M pixels</string>
    <string name="pref_camera_picturesize_entry_4mp">4M pixels</string>
    <string name="pref_camera_picturesize_entry_3mp">3M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp">2M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp_wide">2M pixels (16:9)</string>
    <string name="pref_camera_picturesize_entry_1_5mp">1.5M pixels</string>
    <string name="pref_camera_picturesize_entry_1_3mp">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1mp">1M pixels</string>
    <string name="pref_camera_picturesize_entry_vga">VGA</string>
    <string name="pref_camera_picturesize_entry_qvga">QVGA</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_continuous_picture">Continuous</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_focusmode_label_continuous_picture">CONTINUOUS</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_label">FLASH MODE</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_label_auto">FLASH AUTO</string>
    <string name="pref_camera_flashmode_label_on">FLASH ON</string>
    <string name="pref_camera_flashmode_label_off">FLASH OFF</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_camera_hdr_plus_default">@string/setting_off_value</string>
    <string name="pref_video_effect_default" translatable="false">none</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="pref_camera_antibanding_title">Antibanding</string>
    <string name="pref_camera_antibanding_entryvalue_50" translatable="false">50hz</string>
    <string name="pref_entry_value_auto" translatable="false">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_color_effect_title">Color Effect</string>
    <string name="pref_camera_video_zsl_title" translatable="false">ZSL</string>
    <string name="pref_entry_switch_value_off">off</string>
    <string name="notice_storage_empty">Has selected</string>
    <string name="pref_freeze_frame_display_title">Freeze-frame display</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="general_settings">General Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="pref_camera_video_contrast_title">Contrast</string>
    <string name="pref_entry_value_one" translatable="false">1</string>
    <string name="pref_entry_value_three" translatable="false">3</string>
    <string name="pref_camera_metering_title">Metering</string>
    <string name="pref_camera_metering_entry_value_frame_average" translatable="false">frame-average</string>
    <string name="pref_camera_jpeg_quality_title">Picture quality</string>
    <string name="pref_camera_jpegh_quality_entry_value_super_hight" translatable="false">super</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_entry_value_none" translatable="false">none</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_save_storage_path_default" translatable="false">DEFAULT_PATH</string>
    <string name="pref_camera_storage_path_title">Storage Path</string>
    <string name="pref_entry_value_off" translatable="false">off</string>
    <string name="pref_camera_continuous_capture_title">Burst</string>
    <string name="pref_video_encode_type_title">Encode type</string>
    <string name="pref_video_encode_type_entry_value_h264" translatable="false">h264</string>
    <string name="pref_video_slow_motion_title">Slow Motion</string>
   <string name="pref_camera_ai_detect_title">AI Detect</string>
    <string name="pref_camera_brightness_titile">Brightness</string>
</resources>