<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/com.android.camera2"
        camera:title="@string/pref_camera_settings_category">
    <IconListPreference
            camera:key="pref_camera_flashmode_key"
            camera:defaultValue="@string/pref_camera_flashmode_default"
            camera:title="@string/pref_camera_flashmode_title"
            camera:icons="@array/camera_flashmode_icons"
            camera:largeIcons="@array/camera_flashmode_largeicons"
            camera:entries="@array/pref_camera_flashmode_entries"
            camera:entryValues="@array/pref_camera_flashmode_entryvalues"
            camera:labelList="@array/pref_camera_flashmode_labels" />
    <ListPreference
            camera:key="pref_camera_exposure_key"
            camera:defaultValue="@string/pref_exposure_default"
            camera:title="@string/pref_exposure_title"/>
    <IconListPreference
            camera:key="pref_camera_scenemode_key"
            camera:defaultValue="@string/pref_camera_scenemode_default"
            camera:title="@string/pref_camera_scenemode_title"
            camera:entries="@array/pref_camera_scenemode_entries"
            camera:entryValues="@array/pref_camera_scenemode_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_whitebalance_key"
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:title="@string/pref_camera_whitebalance_title"
            camera:icons="@array/whitebalance_icons"
            camera:largeIcons="@array/whitebalance_largeicons"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"
            camera:labelList="@array/pref_camera_whitebalance_labels" />
    <RecordLocationPreference
            camera:key="pref_camera_recordlocation_key"
            camera:defaultValue="@string/pref_camera_recordlocation_default"
            camera:title="@string/pref_camera_recordlocation_title"
            camera:icons="@array/camera_recordlocation_icons"
            camera:largeIcons="@array/camera_recordlocation_largeicons"
            camera:entries="@array/pref_camera_recordlocation_entries"
            camera:labelList="@array/pref_camera_recordlocation_labels"
            camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
    <ListPreference
            camera:key="pref_camera_picturesize_key"
            camera:title="@string/pref_camera_picturesize_title"
            camera:entries="@array/pref_camera_picturesize_entries"
            camera:entryValues="@array/pref_camera_picturesize_entryvalues" />
    <ListPreference
            camera:key="pref_camera_focusmode_key"
            camera:defaultValue="@array/pref_camera_focusmode_default_array"
            camera:title="@string/pref_camera_focusmode_title"
            camera:entries="@array/pref_camera_focusmode_entries"
            camera:labelList="@array/pref_camera_focusmode_labels"
            camera:entryValues="@array/pref_camera_focusmode_entryvalues" />
    <ListPreference
            camera:key="pref_camera_burst_key"
            camera:title="@string/pref_camera_continuous_capture_title"
            camera:defaultValue="@string/pref_entry_value_one"
            camera:entries="@array/pref_camera_burst_entries"
            camera:entryValues="@array/pref_camera_burst_entryvalues" />
     <ListPreference
            camera:key="pref_camera_ai_detect_key"
            camera:title="@string/pref_camera_ai_detect_title"
            camera:defaultValue="@string/pref_entry_value_off"
            camera:entries="@array/pref_camera_ai_detect_entries"
            camera:entryValues="@array/pref_camera_ai_detect_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_id_key"
            camera:defaultValue="@string/pref_camera_id_default"
            camera:title="@string/pref_camera_id_title"
            camera:icons="@array/camera_id_icons"
            camera:entries="@array/camera_id_entries"
            camera:labelList="@array/camera_id_labels"
            camera:largeIcons="@array/camera_id_largeicons" />
    <IconListPreference
            camera:key="pref_camera_hdr_key"
            camera:defaultValue="@string/pref_camera_hdr_default"
            camera:title="@string/pref_camera_scenemode_entry_hdr"
            camera:entries="@array/pref_camera_hdr_entries"
            camera:icons="@array/pref_camera_hdr_icons"
            camera:largeIcons="@array/pref_camera_hdr_icons"
            camera:labelList="@array/pref_camera_hdr_labels"
            camera:entryValues="@array/pref_camera_hdr_entryvalues" />
    <IconListPreference
            camera:key="pref_camera_hdr_plus_key"
            camera:defaultValue="@string/pref_camera_hdr_plus_default"
            camera:title="@string/pref_camera_scenemode_entry_hdr_plus"
            camera:entries="@array/pref_camera_hdr_plus_entries"
            camera:icons="@array/pref_camera_hdr_plus_icons"
            camera:largeIcons="@array/pref_camera_hdr_plus_icons"
            camera:labelList="@array/pref_camera_hdr_plus_labels"
            camera:entryValues="@array/pref_camera_hdr_plus_entryvalues" />
    <CountDownTimerPreference
            camera:key="pref_camera_timer_key"
            camera:defaultValue="@string/pref_camera_timer_default"
            camera:title="@string/pref_camera_timer_title" />
    <ListPreference
            camera:key="pref_camera_timer_sound_key"
            camera:defaultValue="@string/pref_camera_timer_sound_default"
            camera:title="@string/pref_camera_timer_sound_title"
            camera:entries="@array/pref_camera_timer_sound_entries"
            camera:entryValues="@array/pref_camera_timer_sound_entryvalues" />

    <!-- SPRD: Add View pref_camera_antibanding_key @{ -->
    <IconListPreference
            camera:key="pref_camera_antibanding_key"
            camera:defaultValue="@string/pref_camera_antibanding_entryvalue_50"
            camera:title="@string/pref_camera_antibanding_title"
            camera:singleIcon="@drawable/ic_sce"
            camera:entries="@array/pref_camera_antibanding_entries"
            camera:labelList="@array/pref_camera_antibanding_entries"
            camera:entryValues="@array/pref_camera_antibanding_entryvalues" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_iso_key @{ -->
    <IconListPreference
            camera:key="pref_camera_iso_key"
            camera:defaultValue="@string/pref_entry_value_auto"
            camera:title="@string/pref_camera_iso_title"
            camera:singleIcon="@drawable/ic_sce"
            camera:entries="@array/pref_camera_iso_entries"
            camera:labelList="@array/pref_camera_iso_entries"
            camera:entryValues="@array/pref_camera_iso_entryvalues" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_color_effect_key @{ -->
    <IconListPreference
            camera:key="pref_camera_color_effect_key"
            camera:defaultValue="@string/pref_entry_value_none"
            camera:title="@string/pref_color_effect_title"
            camera:entries="@array/pref_camera_color_effect_entries"
            camera:entryValues="@array/pref_camera_color_effect_entryvalues" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_video_zsl_key @{ -->
    <IconListPreference
            camera:key="pref_camera_video_zsl_key"
            camera:defaultValue="@string/pref_entry_switch_value_off"
            camera:title="@string/pref_camera_video_zsl_title"
            camera:singleIcon="@drawable/ic_sce"
            camera:entries="@array/pref_switch_entries"
            camera:labelList="@array/pref_switch_entries"
            camera:entryValues="@array/pref_switch_entryvalues" />
    <!-- @} -->

    <!--SPRD: uui camera setting start @{ -->
    <ListPreference
            camera:key="general_settings"
            camera:defaultValue="@string/general_settings"
            camera:title="@string/general_settings" />
    <ListPreference
            camera:key="advanced_settings"
            camera:defaultValue="@string/advanced_settings"
            camera:title="@string/advanced_settings" />
    <!-- uui camera setting end @} -->

    <!-- SPRD: Add View pref_camera_video_contrast_key @{ -->
    <IconListPreference
            camera:key="pref_camera_video_contrast_key"
            camera:defaultValue="@string/pref_entry_value_three"
            camera:title="@string/pref_camera_video_contrast_title"
            camera:singleIcon="@drawable/ic_sce"
            camera:entries="@array/pref_camera_video_contrast_entry_values"
            camera:labelList="@array/pref_camera_video_contrast_entry_values"
            camera:entryValues="@array/pref_camera_video_contrast_entry_values" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_metering_key @{ -->
    <IconListPreference
            camera:key="pref_camera_metering_key"
            camera:defaultValue="@string/pref_camera_metering_entry_value_frame_average"
            camera:title="@string/pref_camera_metering_title"
            camera:singleIcon="@drawable/ic_exposure_holo_light"
            camera:entries="@array/pref_camera_metering_entries"
            camera:labelList="@array/pref_camera_metering_entries"
            camera:entryValues="@array/pref_camera_metering_entryvalues" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_brightness_key @{ -->
    <ListPreference
        camera:key="pref_camera_brightness_key"
        camera:defaultValue="@string/pref_entry_value_three"
        camera:title="@string/pref_camera_brightness_titile"
        camera:entries="@array/pref_camera_brightness_entry_values"
        camera:entryValues="@array/pref_camera_brightness_entry_values" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_jpeg_quality_key @{ -->
    <ListPreference
            camera:key="pref_camera_jpeg_quality_key"
            camera:defaultValue="@string/pref_camera_jpegh_quality_entry_value_super_hight"
            camera:title="@string/pref_camera_jpeg_quality_title"
            camera:entries="@array/pref_camera_jpeg_quality_entries"
            camera:entryValues="@array/pref_camera_jpeg_quality_entry_values" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_sharpness_key @{ -->
     <ListPreference
        camera:key="pref_camera_sharpness_key"
        camera:defaultValue="@string/pref_entry_value_three"
        camera:title="@string/pref_camera_sharpness_title"
        camera:entries="@array/pref_camera_sharpness_entries"
        camera:entryValues="@array/pref_camera_sharpness_entry_values" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_camera_saturation_key @{ -->
    <ListPreference
        camera:key="pref_camera_saturation_key"
        camera:defaultValue="@string/pref_entry_value_three"
        camera:title="@string/pref_camera_saturation_title"
        camera:entries="@array/pref_camera_saturation_entries"
        camera:entryValues="@array/pref_camera_saturation_entry_values" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_freeze_frame_display_key @{ -->
    <IconListPreference
        camera:key="pref_freeze_frame_display_key"
        camera:defaultValue="@string/pref_entry_value_off"
        camera:title="@string/pref_freeze_frame_display_title"
        camera:entries="@array/pref_switch_entries"
        camera:entryValues="@array/pref_switch_entryvalues" />
    <!-- }@ -->
    <!-- SPRD: Add view pref_camera_storage_path @{ -->
    <ListPreference
        camera:key="pref_camera_storage_path"
        camera:defaultValue="@string/pref_save_storage_path_default"
        camera:title="@string/pref_camera_storage_path_title" />
    <!-- }@ -->

</PreferenceGroup>
