<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceGroup
        xmlns:camera="http://schemas.android.com/apk/res/com.android.camera2"
        camera:title="@string/pref_camcorder_settings_category">
    <ListPreference
            camera:key="pref_video_quality_key"
            camera:defaultValue="@string/pref_video_quality_default"
            camera:title="@string/pref_video_quality_title"
            camera:entries="@array/pref_video_quality_entries"
            camera:entryValues="@array/pref_video_quality_entryvalues"/>
    <IconListPreference
            camera:key="pref_video_time_lapse_frame_interval_key"
            camera:defaultValue="@string/pref_video_time_lapse_frame_interval_default"
            camera:title="@string/pref_video_time_lapse_frame_interval_title"
            camera:singleIcon="@drawable/ic_timelapse_none"
            camera:entries="@array/pref_video_time_lapse_frame_interval_entries"
            camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues"/>
    <IconListPreference
            camera:key="pref_camera_video_flashmode_key"
            camera:defaultValue="@string/pref_camera_video_flashmode_default"
            camera:title="@string/pref_camera_flashmode_title"
            camera:icons="@array/video_flashmode_icons"
            camera:largeIcons="@array/video_flashmode_largeicons"
            camera:entries="@array/pref_camera_video_flashmode_entries"
            camera:labelList="@array/pref_camera_video_flashmode_labels"
            camera:entryValues="@array/pref_camera_video_flashmode_entryvalues"/>
    <IconListPreference
            camera:key="pref_camera_whitebalance_key"
            camera:defaultValue="@string/pref_camera_whitebalance_default"
            camera:title="@string/pref_camera_whitebalance_title"
            camera:icons="@array/whitebalance_icons"
            camera:largeIcons="@array/whitebalance_largeicons"
            camera:entries="@array/pref_camera_whitebalance_entries"
            camera:labelList="@array/pref_camera_whitebalance_labels"
            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"/>
    <IconListPreference
            camera:key="pref_camera_id_key"
            camera:defaultValue="@string/pref_camera_id_default"
            camera:title="@string/pref_camera_id_title"
            camera:icons="@array/camera_id_icons"
            camera:entries="@array/camera_id_entries"
            camera:labelList="@array/camera_id_labels"
            camera:largeIcons="@array/camera_id_largeicons"/>
    <IconListPreference
            camera:key="pref_video_effect_key"
            camera:defaultValue="@string/pref_video_effect_default"
            camera:title="@string/pref_video_effect_title"
            camera:icons="@array/video_effect_icons"
            camera:largeIcons="@array/video_effect_icons"
            camera:entries="@array/pref_video_effect_entries"
            camera:entryValues="@array/pref_video_effect_entryvalues" />
    <RecordLocationPreference
            camera:key="pref_camera_recordlocation_key"
            camera:defaultValue="@string/pref_camera_recordlocation_default"
            camera:title="@string/pref_camera_recordlocation_title"
            camera:icons="@array/camera_recordlocation_icons"
            camera:largeIcons="@array/camera_recordlocation_largeicons"
            camera:entries="@array/pref_camera_recordlocation_entries"
            camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
    <!-- SPRD: Add View pref_camera_video_zsl_key @{ -->
    <IconListPreference
            camera:key="pref_camera_video_zsl_key"
            camera:defaultValue="@string/pref_entry_switch_value_off"
            camera:title="@string/pref_camera_video_zsl_title"
            camera:singleIcon="@drawable/ic_sce"
            camera:entries="@array/pref_switch_entries"
            camera:labelList="@array/pref_switch_entries"
            camera:entryValues="@array/pref_switch_entryvalues" />
    <!-- @} -->
    <!--SPRD: uui camera setting start @{ -->
    <ListPreference
            camera:key="general_settings"
            camera:defaultValue="@string/general_settings"
            camera:title="@string/general_settings" />
    <ListPreference
            camera:key="advanced_settings"
            camera:defaultValue="@string/advanced_settings"
            camera:title="@string/advanced_settings" />
    <!-- uui camera setting end @} -->
    <!-- SPRD: Add View pref_video_color_effect_key @{ -->
    <IconListPreference
        camera:key="pref_video_color_effect_key"
        camera:defaultValue="@string/pref_entry_value_none"
        camera:title="@string/pref_color_effect_title"
        camera:entries="@array/pref_camera_color_effect_entries"
        camera:entryValues="@array/pref_camera_color_effect_entryvalues" />
    <!-- @} -->

    <ListPreference
        camera:key="pref_video_encode_type"
        camera:defaultValue="@string/pref_video_encode_type_entry_value_h264"
        camera:title="@string/pref_video_encode_type_title"
        camera:entries="@array/pref_video_encode_type_entries"
        camera:entryValues="@array/pref_video_encode_type_entry_values" />

    <!-- SPRD: Add view pref_camera_storage_path @{ -->
    <ListPreference
        camera:key="pref_video_storage_path"
        camera:defaultValue="@string/pref_save_storage_path_default"
        camera:title="@string/pref_camera_storage_path_title" />
    <!-- }@ -->

    <!-- SPRD: Add View pref_video_slow_motion_key @{ -->
    <ListPreference
        camera:key="pref_video_slow_motion_key"
        camera:defaultValue="@string/pref_entry_value_one"
        camera:title="@string/pref_video_slow_motion_title"
        camera:entries="@array/pref_video_slow_motion_entries"
        camera:entryValues="@array/pref_video_slow_motion_entry_values" />
    <!-- @} -->
</PreferenceGroup>
