<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010, The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.android.camera.ui.StoragePathPopup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_group_save_path"
    style="@style/SettingPopupWindow">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/popup_whiteground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_title_frame_min_height"
            android:background="@drawable/ab_solid_light_holo">
            <ImageView
                android:id="@+id/btn_save_path_back"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:focusable="true"
                android:visibility="visible"
                android:src="@drawable/ic_ab_back_holo_light"/>
            <TextView
                android:id="@+id/tv_save_path_title"
                android:text="@string/pref_camera_storage_path_title"
                android:layout_toRightOf="@id/btn_save_path_back"
                android:layout_centerVertical="true"
                style="@style/PopupTitleOptions"
                android:textColor="@color/actionbar_primary_text_holo_light" />
            <Button
                android:id="@+id/btn_save_path_done"
                android:layout_alignParentRight="true"
                android:text="@string/button_ok"
                android:textColor="@drawable/title_button_selector"
                style="@style/SavePathControlIcon"
                android:visibility="visible" />
            <View
                android:id="@+id/save_path_divider"
                android:layout_width="1px"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_save_path_done"
                android:background="@drawable/ab_menu_divider_holo_light" />
            <Button
                android:id="@+id/btn_save_path_cancel"
                android:text="@string/button_cancel"
                android:textColor="@drawable/title_button_selector"
                android:layout_toLeftOf="@id/save_path_divider"
                style="@style/SavePathControlIcon"
                android:visibility="visible" />
        </RelativeLayout>
        <View style="@style/PopupTitleThinSeparator" />
        <include layout="@layout/preview_progress_notice" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ListView
                android:id="@+id/storage_path_list"
                style="@style/StorageItemList" />
            <TextView
                android:id="@+id/storage_path_list_empty"
                style="@style/SettingStorageText"
                android:gravity="center"
                android:layout_width="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="@dimen/setting_item_text_size"
                android:text="@string/notice_storage_empty" />
        </LinearLayout>
    </LinearLayout>
</com.android.camera.ui.StoragePathPopup>
